--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,19 @@
   <title>ChatApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta Content-Security-Policy-Report-Only: script-src="https://accounts.google.com/gsi/client" ; frame-src="
-    https://accounts.google.com/gsi/" ; connect-src="https://accounts.google.com/gsi/" />
+  <meta content-security-policy-report-only:="" script-src="https://accounts.google.com/gsi/client" ;="" frame-src="
+    https://accounts.google.com/gsi/" connect-src="https://accounts.google.com/gsi/"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body class="mat-typography bg-dark bg-gradient">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
